--- a/README
+++ b/README
@@ -1,2 +1,2 @@
 Some kind of thoughtless first attempt at abstracting network communication
-requires ast and ext
+requires (optional)luasocket, ext, threadmanager, ast, (optional)vec
